--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,10 +2,8 @@ app.title=CLNRA
 navigation.toggle=Toggle navigation
 navigation.home=Home
 navigation.entities=Entities
-home.index.headline=Welcome to your new app\!
-home.index.text=Your app was created with <a href\="https\://bootify.io" target\="_blank">Bootify.io</a> and can now be customized. If you are satisfied with the result, <strong>please recommend us to other developers</strong> - so Bootify.io can grow further.
-home.index.swagger=Swagger is <a href\="/swagger-ui.html" target\="_blank">available here</a>.
-home.index.exploreEntities=Explore your entities
+home.index.headline=Welcome to the CLNRA Management Information System\!
+home.index.text=The CLNRA MIS serves to ensure that Communities are able to map and track the available Natural Resources. The Resources do have an impact on the Community Livelihood Sustainability and Security with the availability of adequate Data.
 error.message=The page you are looking for is not available right now.
 administrative.list.headline=Administratives
 administrative.list.createNew=Create new Administrative
